--- a/chess-front/index.html
+++ b/chess-front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chess-front</title>
+    <title>Double Chess</title>
     <script>
       if (!crossOriginIsolated) {
         console.warn("⚠️ Page is not cross-origin isolated. SharedArrayBuffer will not work. Ensure server sends COOP/COEP headers.");
